--- a/assets/t4s-banner.css
+++ b/assets/t4s-banner.css
@@ -1,6 +1,7 @@
 /*.t4s-banner .t4s-container-fluid {
-	overflow-x: hidden;
-}*/
+*	overflow-x: hidden;
+* }
+*/
 .t4s-banner-item .t4s-banner-inner {
 	position: relative;
 	overflow: hidden;
