--- a/assets/t4s-back-to-top.css
+++ b/assets/t4s-back-to-top.css
@@ -7,7 +7,9 @@
     border: solid 1px var(--border-color);
     text-align: center;
     line-height: 50px;
-    display: inline-block;
+    /*
+    * display: inline-block;
+    */
     vertical-align: top;
     font-size: 14px;
     color: var(--secondary-color);
@@ -16,8 +18,11 @@
     visibility: hidden;
     transition: 0.5s ease-in-out 0s;
     transform: scale(0);
-    right: 0;
-    bottom: 0;
+    /*
+    * right: 0;
+    * bottom: 0;
+    */
+    bottom: 40px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -107,9 +112,11 @@
         right: 5px;
     }
 }
-#t4s-backToTop {
-    bottom: 40px;
-}
+/*
+* #t4s-backToTop {
+*    bottom: 40px;
+* }
+*/
 .sticky-is--active #t4s-backToTop {
     bottom: calc( 10px + var(--stickyATC-height, 30px) );
 }
