--- a/assets/t4s-collection-products.css
+++ b/assets/t4s-collection-products.css
@@ -124,17 +124,21 @@
     transform: translate(0);
     opacity: 1;
     visibility: visible;
-    /* color: var(--wishlist-active-cl);
-    background-color: var(--wishlist-active-bg-cl); */
+    /* 
+    * color: var(--wishlist-active-cl);
+    * background-color: var(--wishlist-active-bg-cl);
+    */
     color: var(--wishlist-active-bg-cl);
 }
 .t4s-product .t4s-pr-compare {
     color: var(--compare-cl);
     background-color: var(--compare-bg-cl);
 }
-/* .t4s-product .t4s-pr-compare .t4s-svg-pr-icon svg{
-    transition: 0.3s ease 0s;
-} */
+/* 
+* .t4s-product .t4s-pr-compare .t4s-svg-pr-icon svg{
+*    transition: 0.3s ease 0s;
+* }
+*/
 
 .t4s-product .t4s-pr-quickview {
     color: var(--quickview-cl);
@@ -484,8 +488,7 @@
 
 .t4s-product .t4s-product-atc-qty,
 .t4s-product .t4s-product-btns .t4s-pr-item-btn,
-.t4s-product .t4s-product-btns2 .t4s-pr-item-btn,
-.t4s-product .t4s-product-btns .t4s-pr-item-btn {
+.t4s-product .t4s-product-btns2 .t4s-pr-item-btn, {
     border-radius: var(--pr-btn-radius-size);
     pointer-events: auto;
 }
@@ -764,9 +767,11 @@
 .t4s-pr-style5 .t4s-product-inner .t4s-product-sizes {
     bottom: 40px;
 }
-.t4s-pr-style6 .t4s-product-inner .t4s-product-sizes {
-    bottom: 19px;
-}
+/*
+* .t4s-pr-style6 .t4s-product-inner .t4s-product-sizes {
+*    bottom: 19px;
+* }
+*/
 .t4s-pr-style4 .t4s-product-btns {
     flex-direction: column;
     justify-content: center;
@@ -796,9 +801,11 @@
     transform: translateY(10px);
     transition: 0.3s;
 }
-.t4s-pr-style4 .t4s-product-btns a.t4s-pr-addtocart {
-    flex: 1 0 0%;
-}
+/* 
+* .t4s-pr-style4 .t4s-product-btns a.t4s-pr-addtocart {
+*    flex: 1 0 0%;
+* }
+*/
 .t4s-pr-style4 .t4s-product-btns .t4s-pr-group-btns > .t4s-pr-item-btn:nth-child(2) {
     transform: translateY(15px);
     transition: 0.4s;
@@ -816,6 +823,7 @@
     display: none;
 }
 .t4s-pr-style4 .t4s-product-btns a.t4s-pr-addtocart {
+    flex: 1 0 0%;
     width: 100%;
     max-width: 100%;
     display: grid;
@@ -1086,11 +1094,14 @@
     font-size: 14px;
     font-weight: 500;
     line-height: 24px;
-}
-.t4s-widget__pr-title,
-.t4s-product.t4s-pr-group .t4s-widget__pr-title {
     color: var(--secondary-color);
 }
+/*
+* .t4s-widget__pr-title,
+* .t4s-product.t4s-pr-group .t4s-widget__pr-title {
+*     color: var(--secondary-color);
+* }
+*/
 .t4s-widget__pr-title a,
 .t4s-product.t4s-pr-group .t4s-widget__pr-title a {
     color: inherit;
@@ -1267,11 +1278,15 @@
         left: 5px;
         right: 5px;
         padding: 5px;
-    }
-    .t4s-product .t4s-product-countdown {
         font-size: 10px;
         line-height: 1.2;
     }
+    /*
+    * .t4s-product .t4s-product-countdown {
+    *    font-size: 10px;
+    *    line-height: 1.2;
+    * }
+    */
 
     .t4s-product .t4s-product-inner .t4s-product-sizes {
         font-size: 12px;
@@ -1398,7 +1413,6 @@
         opacity: 1;
         visibility: visible;
     }
-    .t4s-product .t4s-product-atc-qty .t4s-pr-addtocart.is--loading > span,
     .t4s-product .t4s-product-atc-qty .t4s-pr-addtocart.is--loading > span {
         opacity: 0;
         visibility: hidden;
