--- a/assets/t4s-facets.css
+++ b/assets/t4s-facets.css
@@ -53,10 +53,12 @@
     z-index: 1
 }
 
-.noUi-connects {
-    overflow: hidden;
-    z-index: 0
-}
+/* 
+* .noUi-connects {
+*     overflow: hidden;
+*     z-index: 0
+* }
+*/
 
 .noUi-connect,.noUi-origin {
     will-change: transform;
@@ -73,9 +75,11 @@
     width: 10%
 }
 
-/* .rtl_true .noUi-rtl.noUi-horizontal {
-    direction: ltr
-} */
+/* 
+* .rtl_true .noUi-rtl.noUi-horizontal {
+*     direction: ltr
+* } 
+*/
 
 .noUi-txt-dir-rtl.noUi-horizontal .noUi-origin {
     left: 0;
@@ -145,13 +149,14 @@
     box-shadow: inset 0 0 1px var(--t4s-light-color),inset 0 1px 7px #ddd,0 3px 6px -3px #bbb
 }
 
-.noUi-handle:after,.noUi-handle:before {
-    content: "";
-    display: block;
-    position: absolute;
-    left: 14px
-}
-
+/* 
+*.noUi-handle:after,.noUi-handle:before {
+*    content: "";
+*    display: block;
+*    position: absolute;
+*    left: 14px
+*}
+*/
 .noUi-vertical .noUi-handle:after,.noUi-vertical .noUi-handle:before {
     width: 14px;
     height: 1px;
@@ -308,6 +313,8 @@
 }
 
 .noUi-connects {
+    overflow: hidden;
+    z-index: 0
     border-radius: 0;
     height: 2px;
     background-color: var(--border-color);
@@ -333,6 +340,10 @@
 }
 
 .noUi-handle:after,.noUi-handle:before {
+    content: "";
+    display: block;
+    position: absolute;
+    left: 14px
     background: var(--accent-color);
     top: 4px;
     width: 2px;
@@ -473,15 +484,18 @@
 .t4s-facets__form .t4s-facet ul li a:hover {
     color: var(--accent-color);
 }
-/* css style checkbox */
-.is--style-checkbox {
 
-}
+/* css style checkbox */
+/* 
+* .is--style-checkbox {
+* }
+*/
 
 /* css style tag */
-.is--style-tag {
-
-}
+/* 
+* .is--style-tag {
+*  } 
+*/
 .t4s-facets__form .t4s-facet .is--style-tag li {
     display: inline-block;
     vertical-align: top;
