--- a/assets/t4s-hero.css
+++ b/assets/t4s-hero.css
@@ -18,25 +18,27 @@
 .t4s-hero-video .t4s-video-bg-placeholder {
     background-color: #f5f5f5;
 }
-/* @media screen and (min-width: 1140px){
-    .t4s-bg-video iframe {
-        width: 100%;
-        height: 300%!important;
-        left: auto!important;
-        top: -100%!important;
-    }
-}
-.t4s-bg-video iframe {
-    height: 100%;
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    width: 300%!important;
-    left: -100%!important;
-    max-width: none;
-    pointer-events: none;
-} */
+/* 
+* @media screen and (min-width: 1140px){
+*     .t4s-bg-video iframe {
+*         width: 100%;
+*         height: 300%!important;
+*         left: auto!important;
+*         top: -100%!important;
+*     }
+* }
+* .t4s-bg-video iframe {
+*     height: 100%;
+*     position: absolute;
+*     top: 0;
+*     right: 0;
+*     bottom: 0;
+*     width: 300%!important;
+*     left: -100%!important;
+*     max-width: none;
+*     pointer-events: none;
+* } 
+*/
 .t4s-bg-video iframe {
   position: absolute;
   top: 0;
@@ -48,18 +50,20 @@
   pointer-events: none;
 }
 
-/* @media (min-aspect-ratio: 16/9) {
- .t4s_tp_bgvideo .t4s-bg-video iframe {
-    height: 300% !important;
-    top: -100% !important;
-  }
-}
-@media (max-aspect-ratio: 16/9) {
-  .t4s_tp_bgvideo .t4s-bg-video iframe {
-    width: 300% !important;
-    left: -100% !important;
-  }
-} */
+/* 
+* @media (min-aspect-ratio: 16/9) {
+*  .t4s_tp_bgvideo .t4s-bg-video iframe {
+*     height: 300% !important;
+*     top: -100% !important;
+*   }
+* }
+* @media (max-aspect-ratio: 16/9) {
+*   .t4s_tp_bgvideo .t4s-bg-video iframe {
+*     width: 300% !important;
+*     left: -100% !important;
+*   }
+* }
+*/
 
 .t4s-bgvideo-playing video.t4s_bg_vid_html5,
 .t4s-video{
