--- a/assets/t4s-mini-cart.css
+++ b/assets/t4s-mini-cart.css
@@ -86,7 +86,9 @@ input[type=checkbox][data-agree-checkbox]+label:before {
     min-width: 16px;
     border: 1px solid var(--border-color);
     background: var(--t4s-color-light);
-    box-shadow: 0 1px rgb(212 214 216 / 40%);
+    /* 
+    * box-shadow: 0 1px rgb(212 214 216 / 40%);
+    */
     border-radius: 2px;
     appearance: none;
     box-shadow: none;
@@ -338,20 +340,21 @@ ul.t4s-cart_discount_price svg {
 }
 .t4s-mini_cart__tool{
     transition: .35s;
-    /* background-color: #f5f5f5; */
+    /* 
+    * background-color: #f5f5f5;
+    */
     background-color: rgba(var(--border-color-rgb),.3);
 }
 .t4s-mini_cart__tool >div{
     height: 40px;
     line-height: 40px;
     margin: 0 20px;
-    transition: .25s ease-in-out;
     color: var(--secondary-color);
     cursor: pointer;
     font-weight: 500;
     border-left: 1px solid rgba(0,0,0,.09);
     border-right: 1px solid rgba(0,0,0,.09);
-    transition: background-color .3s;
+    transition: color .25s ease-in-out, background-color .3s ease-in-out;
     text-align: center;
 }
 .t4s-mini_cart__tool.t4s-mini_cart__tool_icon >div{
@@ -407,13 +410,15 @@ ul.t4s-cart_discount_price svg {
         font-size: 13px;
     }
 }
-.t4s-mini_cart-tool__primary{
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
-    transition: color .25s,background-color .25s,border-color .25s,box-shadow,opacity .25s;
-    background-color: var(--accent-color);
-}
+/* 
+* .t4s-mini_cart-tool__primary {
+*     display: inline-flex;
+*     align-items: center;
+*     justify-content: center;
+*     transition: color .25s,background-color .25s,border-color .25s,box-shadow,opacity .25s;
+*     background-color: var(--accent-color);
+* } 
+*/
 .t4s-mini_cart-tool__primary,
 .t4s-mini_cart-tool__back{
     cursor: pointer;
@@ -441,10 +446,14 @@ ul.t4s-cart_discount_price svg {
     color: var(--secondary-color);
     border: 2px solid var(--secondary-color);
 }
-.t4s-mini_cart-tool__primary{
-    border: 2px solid var(--secondary-color);
+.t4s-mini_cart-tool__primary {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    transition: color .25s,background-color .25s,border-color .25s,box-shadow,opacity .25s;
+    background-color: var(--accent-color);
     color: var(--t4s-light-color);
-    border: 2px solid var(--accent-color);
+    border: 2px solid var(--accent-color, --secondary-color);
 }
 button.t4s-mini_cart-tool__primary{
     margin-top: 15px;
@@ -502,16 +511,14 @@ button.t4s-mini_cart-tool__primary{
     outline: 0;
     padding: 0 15px;
     color: var(--text-color);
-    border-radius: 0;
     max-width: 100%;
     width: 100%;
     height: 40px;
     line-height: 18px;
     transition: border-color .5s;
     box-shadow: none;
-    border-radius: 0;
     appearance: none;
-    border-radius: var(--btn-radius);
+    border-radius: var(--btn-radius, 0);
 }
 .t4s-mini_cart-tool__wrap select {
     padding: 0 30px 0 15px;
