--- a/assets/t4s-slider-settings.css
+++ b/assets/t4s-slider-settings.css
@@ -8,6 +8,10 @@
   --btn-width-slider: 50px;
   --btn-height-slider: 50px;
   --icon-height-slider: 18px;
+  --slider-dot-width           : 11px;
+  --slider-dot-height          : 11px;
+  --slider-dot-background      : var(--t4s-dark-color);
+  --slider-dot-border          : var(--t4s-dark-color);
 }
 .t4s-flicky-slider.t4s-slider-btn-large {
   --btn-width-slider: 60px;
@@ -23,19 +27,23 @@
   align-items: center;
   justify-content: center;
   transition: all 0.5s ease;
-  color: var(--t4s-dark-color);
+  color: var(--slider-btn-color, --t4s-dark-color);
   margin: auto 0;
   min-width: 1px;
   min-height: 1px;
   animation: 1s t4s-ani-fadeIn;
   z-index: 3;
+  background-color: var(--slider-btn-background);
+  border-color: var(--slider-btn-border);
 }
 .flickityt4s-enabled .flickityt4s-prev-next-button[disabled]{
   opacity: 0.3;
 }
-.t4s-flicky-slider.t4s-slider-btn-vi-always .flickityt4s-button {
-  transform: translateX(0) translateY(-50%);
-}
+/* 
+* .t4s-flicky-slider.t4s-slider-btn-vi-always .flickityt4s-button {
+*   transform: translateX(0) translateY(-50%);
+* } 
+*/
 .flickityt4s-prev-next-button .flickityt4s-button-icon {
   height: var(--icon-height-slider) !important;
 }
@@ -44,6 +52,7 @@
   visibility: hidden;
 }
 .t4s-flicky-slider.t4s-slider-btn-vi-always .flickityt4s-button {
+  transform: translateX(0) translateY(-50%);
   opacity: 1;
   visibility: visible;
 }
@@ -67,11 +76,13 @@
   transform: rotate(-45deg);
 }
 /* Buttons Color */
-.t4s-flicky-slider .flickityt4s-button {
-    color: var(--slider-btn-color);
-    background-color: var(--slider-btn-background);
-    border-color: var(--slider-btn-border);
-}
+/* 
+* .t4s-flicky-slider .flickityt4s-button {
+*     color: var(--slider-btn-color);
+*     background-color: var(--slider-btn-background);
+*     border-color: var(--slider-btn-border);
+* } 
+*/
 .t4s-flicky-slider.t4s-slider-btn-cl-light.t4s-slider-btn-style-default .flickityt4s-button{
     box-shadow: 0 2px 10px rgb(54 54 54 / 15%);
 }
@@ -127,6 +138,7 @@
    --slider-btn-background-hover: var(--t4s-dark-color);
    --slider-btn-color-hover     : var(--t4s-light-color);
    --slider-btn-border-hover    : var(--t4s-dark-color);
+   --slider-btn-background:  transparent;
 }
 
 .t4s-flicky-slider.t4s-slider-btn-style-outline.t4s-slider-btn-cl-light {
@@ -165,6 +177,10 @@
 .t4s-flicky-slider.t4s-slider-btn-style-simple {
  --slider-btn-color           : var(--t4s-dark-color);
  --slider-btn-color-hover     : var(--t4s-dark-color);
+ --slider-btn-background      : transparent;
+ --slider-btn-border          : transparent;
+ --slider-btn-background-hover: transparent;
+ --slider-btn-border-hover    : transparent;
 }
 
 .t4s-flicky-slider.t4s-slider-btn-style-simple.t4s-slider-btn-cl-light {
@@ -187,19 +203,23 @@
   --slider-btn-color-hover     : var(--btn-color-hover);
 }
 
-.t4s-flicky-slider.t4s-slider-btn-style-outline {
- --slider-btn-background:  transparent;
-}
+/* 
+* .t4s-flicky-slider.t4s-slider-btn-style-outline {
+*  --slider-btn-background:  transparent;
+* } 
+*/
 .t4s-flicky-slider.t4s-slider-btn-style-outline .flickityt4s-button {
   border-style: solid;
   border-width: 1.5px;
 }
-.t4s-flicky-slider.t4s-slider-btn-style-simple {
-  --slider-btn-background      : transparent;
-  --slider-btn-border          : transparent;
-  --slider-btn-background-hover: transparent;
-  --slider-btn-border-hover    : transparent;
-}
+/* 
+* .t4s-flicky-slider.t4s-slider-btn-style-simple {
+*   --slider-btn-background      : transparent;
+*   --slider-btn-border          : transparent;
+*   --slider-btn-background-hover: transparent;
+*   --slider-btn-border-hover    : transparent;
+* } 
+*/
 .t4s-slider-btn-pos-ontop.t4s-flicky-slider .flickityt4s-button {
   position: absolute;
   z-index: 2;
@@ -255,14 +275,16 @@
 }
 
 /* Default */
-.t4s-flicky-slider {
-  --slider-dot-width           : 11px;
-  --slider-dot-height          : 11px;
-  --slider-dot-background      : var(--t4s-dark-color);
-  --slider-dot-border          : var(--t4s-dark-color);
-}
+/* 
+* .t4s-flicky-slider {
+*   --slider-dot-width           : 11px;
+*   --slider-dot-height          : 11px;
+*   --slider-dot-background      : var(--t4s-dark-color);
+*   --slider-dot-border          : var(--t4s-dark-color);
+* } 
+*/
 .t4s-flicky-slider.t4s-dots-style-default.t4s-dots-cl-default .dot.is-selected {
-  --slider-dot-background      : rgba(0,0,0,.9);;
+  --slider-dot-background      : rgba(0,0,0,.9);
 }
 
 /* Outline */
@@ -281,9 +303,11 @@
   --slider-dot-border          : rgba(0,0,0,.2);
   opacity: 1;
 }
-/* .t4s-flicky-slider.t4s-dots-style-outline.t4s-dots-cl-light .flickityt4s-page-dots .dot {
-  box-shadow: inset 0 0 9px rgb(0 0 0 / 30%);
-} */
+/* 
+* .t4s-flicky-slider.t4s-dots-style-outline.t4s-dots-cl-light .flickityt4s-page-dots .dot {
+*   box-shadow: inset 0 0 9px rgb(0 0 0 / 30%);
+* } 
+*/
 
 /* Elessi */
 .t4s-flicky-slider.t4s-dots-style-elessi {
@@ -326,12 +350,11 @@
 .t4s-flicky-slider.t4s-dots-style-br-outline .dot,
 .t4s-flicky-slider.t4s-dots-style-br-outline2 .dot{
   position: relative;
-  transition: all 0.3s linear;
   --slider-dot-width     : 17px;
   --slider-dot-height    : 17px;
   border-radius: 50%;
   box-shadow: 0 0 0 2px rgb(255 255 255 / 0%);
-  transition: box-shadow 0.3s ease;
+  transition: all 0.3s linear, box-shadow 0.3s ease;
   background-color: transparent!important;
 }
 .t4s-flicky-slider.t4s-dots-style-br-outline .dot{
