--- a/assets/t4s-submenu.css
+++ b/assets/t4s-submenu.css
@@ -1,7 +1,9 @@
 /*Sub Menu*/
-.t4s-menu-item .t4s-sub-menu {
-	text-align:left;
-}
+/* 
+* .t4s-menu-item .t4s-sub-menu {
+* 	text-align:left;
+* }
+*/
 .t4s-menu-item.t4s-type__drop ul{
     --li-pl: 12px;
 }
@@ -9,10 +11,8 @@
     min-width: 260px;
     width: var(--t4s-w-drop,268px);
     padding: 10px 7px;
-    max-width: 100vw;
-    max-height: 75vh;    
-    max-width: var(--t4s-max-width,100vw);
-    max-height: var(--t4s-max-height,75vh);
+    max-width: var(--t4s-max-width, 100vw);
+    max-height: var(--t4s-max-height, 75vh);
     overflow-y: auto;
     -webkit-overflow-scrolling: touch;   
 }
@@ -32,6 +32,7 @@
   color:var(--text-color);
 }
 .t4s-menu-item .t4s-sub-menu {
+  	text-align:left;
     margin-bottom: 0;
 }
 .t4s-navigation > ul > li.has--children > a:before {
@@ -48,12 +49,14 @@
 .t4s-type__drop .t4s-menu-item.has--children {
     position: relative;
 }
-.t4s-type__drop .t4s-menu-item.has--children svg {
-    width: 6px;
-    /* float: right;
-    position: relative;
-    top: 5px; */
-}
+/* 
+* .t4s-type__drop .t4s-menu-item.has--children svg {
+*   width: 6px;
+*   float: right;
+*   position: relative;
+*   top: 5px; 
+* }
+*/
 .t4s-type__drop .t4s-menu-item.has--children .t4s--menu-toggle {
     width: 20px;
     height: 20px;
@@ -70,6 +73,7 @@
     margin-left: 0;
 }
 .t4s-type__drop .t4s-menu-item.has--children svg {
+    width: 6px;
     transform: rotate(90deg);
     transition: all .3s ease;
 }
