--- a/assets/t4s-theme.css
+++ b/assets/t4s-theme.css
@@ -74,7 +74,9 @@ Version: 1.0
    ========================================================================== */
 .t4s-tooltip {
   position: absolute;
-  /* z-index: 1070; */
+  /* 
+  * z-index: 1070;
+  */
   z-index: 2022;
   opacity: 0;
   visibility: hidden;
@@ -112,51 +114,67 @@ Version: 1.0
     border-radius: 0
 }
 
-/* .t4s-tooltip.bs-tooltip-top {
-    margin-top: -3px;
-    padding: 5px 0
-} */
+/* 
+* .t4s-tooltip.bs-tooltip-top {
+*     margin-top: -3px;
+*     padding: 5px 0
+* } 
+*/
 
-/* .t4s-tooltip.bs-tooltip-top .t4s-tt-arrow {
-    bottom: 0;
-    left: 50%;
-    border-width: 5px 5px 0;
-    border-top-color: rgba(0,0,0,.9)
-} */
+/* 
+* .t4s-tooltip.bs-tooltip-top .t4s-tt-arrow {
+*     bottom: 0;
+*     left: 50%;
+*     border-width: 5px 5px 0;
+*     border-top-color: rgba(0,0,0,.9)
+* }
+*/
 
-/* .t4s-tooltip.bs-tooltip-bottom {
-    margin-bottom: -3px;
-    padding: 5px 0
-} */
+/* 
+* .t4s-tooltip.bs-tooltip-bottom {
+*     margin-bottom: -3px;
+*     padding: 5px 0
+* } 
+*/
 
-/* .t4s-tooltip.bs-tooltip-bottom .t4s-tt-arrow {
-    top: 0;
-    left: 50%;
-    border-width: 0 5px 5px;
-    border-bottom-color: rgba(0,0,0,.9)
-} */
+/* 
+* .t4s-tooltip.bs-tooltip-bottom .t4s-tt-arrow {
+*     top: 0;
+*     left: 50%;
+*     border-width: 0 5px 5px;
+*     border-bottom-color: rgba(0,0,0,.9)
+* } 
+*/
 
-/* .t4s-tooltip.bs-tooltip-left {
-    margin-left: -3px
-} */
+/* 
+* .t4s-tooltip.bs-tooltip-left {
+*     margin-left: -3px
+* } 
+*/
 
-/* .t4s-tooltip.bs-tooltip-left .t4s-tt-arrow {
-    top: 50%;
-    right: 0;
-    border-width: 5px 0 5px 5px;
-    border-left-color: rgba(0,0,0,.9)
-} */
+/* 
+* .t4s-tooltip.bs-tooltip-left .t4s-tt-arrow {
+*     top: 50%;
+*     right: 0;
+*     border-width: 5px 0 5px 5px;
+*     border-left-color: rgba(0,0,0,.9)
+* } 
+*/
 
-/* .t4s-tooltip.bs-tooltip-right {
-    margin-left: 3px
-} */
+/* 
+* .t4s-tooltip.bs-tooltip-right {
+*     margin-left: 3px
+* } 
+*/
 
-/* .t4s-tooltip.bs-tooltip-right .t4s-tt-arrow {
-    top: 50%;
-    left: 0;
-    border-width: 5px 5px 5px 0;
-    border-right-color: rgba(0,0,0,.9)
-} */
+/* 
+* .t4s-tooltip.bs-tooltip-right .t4s-tt-arrow {
+*     top: 50%;
+*     left: 0;
+*     border-width: 5px 5px 5px 0;
+*     border-right-color: rgba(0,0,0,.9)
+* } 
+*/
 /* Tooltip end */
 
 /* ==========================================================================
@@ -557,9 +575,7 @@ Version: 1.0
         text-align: center;
         font-weight: 400;
         font-size: 0;
-        opacity: 1;
         cursor: pointer;
-        transition: all .25s ease;
         touch-action: manipulation;
         opacity: 0;
         transition: all .25s ease, opacity 0s ease 0s
@@ -662,17 +678,19 @@ Version: 1.0
       overflow: hidden !important;
       margin-inline-end: var(--scroll-w);
     }
-    .t4s-modal-opened .t4s-modal:before {
-        content: "";
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background-color: #e0e0e0;
-        animation: overlay-on .3s forwards;
-        cursor: pointer;
-    }
+    /* 
+    * .t4s-modal-opened .t4s-modal:before {
+    *     content: "";
+    *     position: fixed;
+    *     top: 0;
+    *     left: 0;
+    *     width: 100%;
+    *     height: 100%;
+    *     background-color: #e0e0e0;
+    *     animation: overlay-on .3s forwards;
+    *     cursor: pointer;
+    * } 
+    */
     .t4s-modal__inner {
       background-color: var(--t4s-body-background);
       width:100%;
@@ -691,7 +709,7 @@ Version: 1.0
       animation:t4s-modal-opening 0.3s forwards;
     }
 
-    .t4s-modal-opened .t4s-modal:before{
+    .t4s-modal-opened .t4s-modal:before {
       content:"";
       position:fixed;
       top:0;
@@ -701,7 +719,9 @@ Version: 1.0
       background-color:#e0e0e0;
       opacity: .6 !important;
       animation: none !important;
-      /* animation:t4s-overlay-on 0.3s forwards; */
+      /* 
+      * animation:t4s-overlay-on 0.3s forwards; 
+      */
       cursor:pointer;
     }
 
@@ -726,11 +746,13 @@ Version: 1.0
     }
     .t4s-modal-close {
         border: 0;
-        padding: 6px;
         position: absolute;
         top: 0;
         right: 0;
-        /* transform: translate(25%,-25%); */
+        /* 
+        * padding: 6px;
+        * transform: translate(25%,-25%); 
+        */
         z-index: 2;
         transition: transform .15s ease-out;
         width: 40px;
@@ -752,7 +774,9 @@ Version: 1.0
     .rtl_true .t4s-modal-close {
        left: 0;
        right: auto;
-       /* transform: translate(-25%,-25%); */
+       /* 
+       * transform: translate(-25%,-25%); 
+       */
     }
     @keyframes t4s-modal-opening {
       0%{
@@ -867,18 +891,22 @@ Version: 1.0
         Background is added as a separate element.
         As animating opacity is much faster than animating rgba() background-color.
     */
+
     .pswp__bg {
-      position: absolute;
-      left: 0;
-      top: 0;
-      width: 100%;
-      height: 100%;
-      background: #000;
-      opacity: 0;
-      -webkit-transform: translateZ(0);
-              transform: translateZ(0);
-      -webkit-backface-visibility: hidden;
-      will-change: opacity; }
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        background: #000;
+        opacity: 0;
+        -webkit-transform: translateZ(0);
+        transform: translateZ(0);
+        -webkit-backface-visibility: hidden;
+        will-change: opacity;
+        -webkit-transition: opacity 333ms cubic-bezier(0.4, 0, 0.22, 1);
+        transition: opacity 333ms cubic-bezier(0.4, 0, 0.22, 1);
+    }
 
     .pswp__scroll-wrap {
       position: absolute;
@@ -890,13 +918,15 @@ Version: 1.0
 
     .pswp__container,
     .pswp__zoom-wrap {
-      -ms-touch-action: none;
-      touch-action: none;
-      position: absolute;
-      left: 0;
-      right: 0;
-      top: 0;
-      bottom: 0; }
+        -ms-touch-action: none;
+        touch-action: none;
+        position: absolute;
+        left: 0;
+        right: 0;
+        top: 0;
+        bottom: 0;
+        -webkit-backface-visibility: hidden; 
+    }
 
     /* Prevent selection and tap highlights */
     .pswp__container,
@@ -906,7 +936,8 @@ Version: 1.0
       -ms-user-select: none;
           user-select: none;
       -webkit-tap-highlight-color: transparent;
-      -webkit-touch-callout: none; }
+      -webkit-touch-callout: none; 
+    }
 
     .pswp__zoom-wrap {
       position: absolute;
@@ -918,20 +949,26 @@ Version: 1.0
       -webkit-transition: -webkit-transform 333ms cubic-bezier(0.4, 0, 0.22, 1);
               transition: transform 333ms cubic-bezier(0.4, 0, 0.22, 1); }
 
-    .pswp__bg {
-      will-change: opacity;
-      /* for open/close transition */
-      -webkit-transition: opacity 333ms cubic-bezier(0.4, 0, 0.22, 1);
-              transition: opacity 333ms cubic-bezier(0.4, 0, 0.22, 1); }
+    /* 
+    * .pswp__bg {
+    *     will-change: opacity;
+    *     for open/close transition
+    *     -webkit-transition: opacity 333ms cubic-bezier(0.4, 0, 0.22, 1);
+    *     transition: opacity 333ms cubic-bezier(0.4, 0, 0.22, 1);
+    * } 
+    */
 
     .pswp--animated-in .pswp__bg,
     .pswp--animated-in .pswp__zoom-wrap {
       -webkit-transition: none;
       transition: none; }
 
-    .pswp__container,
-    .pswp__zoom-wrap {
-      -webkit-backface-visibility: hidden; }
+    /* 
+    * .pswp__container,
+    * .pswp__zoom-wrap {
+    *   -webkit-backface-visibility: hidden; 
+    * } 
+    */
 
     .pswp__item {
       position: absolute;
@@ -1024,7 +1061,7 @@ Version: 1.0
               transition: opacity 0.2s;
       -webkit-box-shadow: none;
               box-shadow: none;
-          background-color: transparent !important;;
+          background-color: transparent !important;
      }
       .pswp__button:focus, .pswp__button:hover {
         opacity: 1; }
@@ -1500,19 +1537,24 @@ Version: 1.0
         cursor: pointer;
         display: inline-block;
     }
-    .pswp_thumb_item img {
-        width: 100%;
-    }
+    /* 
+    * .pswp_thumb_item img {
+    *     width: 100%;
+    * } 
+    */
     .pswp--animated-in .pswp__thumbnails {
         opacity: 1;
         transition: transform .6s cubic-bezier(.19,1,.22,1) 0s;
         transform: translate3d(0,0,0);
     }
-/*     .pswp_thumb_item:not(.pswp_thumb_active) {
-       opacity: .6;
-       box-shadow: 0 0 0 2px var(--accent-color);
-    } */
+    /*     
+    * .pswp_thumb_item:not(.pswp_thumb_active) {
+    *     opacity: .6;
+    *     box-shadow: 0 0 0 2px var(--accent-color);
+    * }
+    */
     .pswp_thumb_item img {
+        width: 100%;
         margin-bottom: -5px;
         opacity: .6;
         transition: transform .6s,opacity .6s;
@@ -1622,11 +1664,13 @@ Version: 1.0
         left: 0;
         top: 0;
         right: 0;
-        height: 100%;
-        width: 100%;
+        /* 
+        * height: 100%;
+        * width: 100%; 
+        * border-radius: 5px;
+        */
         overflow: hidden;
         background-color: #fff;
-        border-radius: 5px;
         width: 50px;
         height: 5px;
         border-radius: 2.5px;
@@ -1658,12 +1702,14 @@ Version: 1.0
 /*     <div class="loading__spinner" hidden><svg aria-hidden="true" focusable="false" role="presentation" class="t4s-svg-spinner" viewBox="0 0 66 66" xmlns="http://www.w3.org/2000/svg">
                           <circle class="t4s-path" fill="none" stroke-width="6" cx="33" cy="33" r="30"></circle>
                         </svg></div> */
-/*     .t4s-predictive-search .t4s-svg-spinner {
-        width: 1.5rem;
-        height: 1.5rem;
-        line-height: 0;
-        --color-foreground: 18, 18, 18;
-    } */
+    /*     
+    * .t4s-predictive-search .t4s-svg-spinner {
+    *     width: 1.5rem;
+    *     height: 1.5rem;
+    *     line-height: 0;
+    *     --color-foreground: 18, 18, 18;
+    * } 
+    */
     .t4s-cart-spinner:not([hidden]),
     .t4s-svg-spinner:not([hidden]),
     .t4s-btn-loading__svg.is--loading .t4s-svg__spinner {
@@ -1794,9 +1840,11 @@ Version: 1.0
         border: 1px solid #ddd
     }
 
-    .bg_color_brown {
-        --t4s-bg-color: #977945
-    }
+    /* 
+    * .bg_color_brown {
+    *     --t4s-bg-color: #977945
+    * } 
+    */
 
     .bg_color_red {
         --t4s-bg-color: #f63400
@@ -2385,15 +2433,16 @@ Version: 1.0
         color: #222;
         font-size: 9px;
         overflow: hidden;
-/*      
-        position: absolute;
-        top: 0;
-        left: 2px;
-        right: 2px;
-        bottom: 0;
-        display: flex;
-        justify-content: center;
-        align-items: center */
+        /*      
+        * position: absolute;
+        * top: 0;
+        * left: 2px;
+        * right: 2px;
+        * bottom: 0;
+        * display: flex;
+        * justify-content: center;
+        * align-items: center 
+        */
     }
 
     .t4s-product-colors.is-t4s--opended .t4s-pr-color__item.is--colors-more a:before {
@@ -2403,9 +2452,11 @@ Version: 1.0
     .t4s-product-colors.is-t4s--opended .t4s-pr-color__item:not(.is--colors-more) {
         display: inline-block!important;
     }
-/*     .t4s-pr-color__value.lazyloadt4sed {
-        animation: 1.25s cubic-bezier(.26,.54,.32,1) forwards t4s-ani-fadeIn;
-    } */
+    /*     
+    * .t4s-pr-color__value.lazyloadt4sed {
+    *     animation: 1.25s cubic-bezier(.26,.54,.32,1) forwards t4s-ani-fadeIn;
+    * } 
+    */
 
 /* ==========================================================================
    12. CLOSE OVERLAY
@@ -2729,7 +2780,9 @@ header {
 }
 
 .drift-zoom-pane {
-  /* background: rgba(0, 0, 0, 0.5); */
+  /* 
+  * background: rgba(0, 0, 0, 0.5); 
+  */
   /* This is required because of a bug that causes border-radius to not
   work with child elements in certain cases. */
   background: #fff;
@@ -2851,7 +2904,9 @@ header {
     margin-inline-start: 5px;
     display: inline-block;
 }
-.t4s-type__drop> .t4s-sub-menu{padding:10px 0}
+.t4s-type__drop> .t4s-sub-menu {
+  padding:10px 0
+}
 .t4s-type__mega> .t4s-sub-menu *,
 .t4s-type__drop> .t4s-sub-menu *,
 .t4s-type__lv0_mega> .t4s-sub-menu *,
@@ -2861,16 +2916,18 @@ header {
 .t4s-type__mega> .t4s-sub-menu,
 .t4s-type__lv0_mega> .t4s-sub-menu {
    padding: 20px 15px;
-   max-width: 100vw;
-   max-height: 75vh;
    overflow-y: auto;
     -webkit-overflow-scrolling: touch;
+   max-width: var(--t4s-max-width, 100vw);
+   max-height: var(--t4s-max-height, 75vh);
 }
-.t4s-type__mega> .t4s-sub-menu,
-.t4s-type__lv0_mega> .t4s-sub-menu {
-   max-width: var(--t4s-max-width,100vw);
-   max-height: var(--t4s-max-height,75vh);
-}
+/* 
+* .t4s-type__mega> .t4s-sub-menu,
+* .t4s-type__lv0_mega> .t4s-sub-menu {
+*   max-width: var(--t4s-max-width,100vw);
+*   max-height: var(--t4s-max-height,75vh);
+* }
+*/
 #shopify-section-header-vertical .t4s-type__mega > .t4s-sub-menu {
    max-width: calc(100vw - 280px);
    max-width: -webkit-calc(100vw - 280px);
@@ -2897,24 +2954,27 @@ header {
     -webkit-transform: none;
     transform: none
 }
-/* .t4s-nav__ul>li.t4s-menu-item:after {
-    content: '';
-    position: absolute;
-    right: 0;
-    bottom: 11px;
-    left: 0;
-    height: 20px;
-    pointer-events: none;
-    opacity: 0;
-}
+/* 
+* .t4s-nav__ul>li.t4s-menu-item:after {
+*     content: '';
+*     position: absolute;
+*     right: 0;
+*     bottom: 11px;
+*     left: 0;
+*     height: 20px;
+*     pointer-events: none;
+*     opacity: 0;
+* }
  */
 .t4s-nav__ul>li.t4s-menu-item.is-action__hover:after {
     pointer-events: auto;
     opacity: 1;
 }
-/* .t4s-section-header:not(.calc-pos-submenu) {
-    overflow-x: hidden;
-} */
+/* 
+* .t4s-section-header:not(.calc-pos-submenu) {
+*     overflow-x: hidden;
+* } 
+*/
 .menu-width__full .t4s-sub-menu {
    width: 100vw;
    left: 0;
@@ -3014,23 +3074,29 @@ header {
 /* ==========================================================================
    18. SHOPIFY MODEL
    ========================================================================== */
-/* .shopify-model-viewer-ui .shopify-model-viewer-ui__button--poster,
-button.plyr__control.plyr__control--overlaid {
-    background-color: #5b5b5b;
-    color: #f3f3f3 !important;
-    border: 1px solid rgba(243,243,243,0.05)
-}
-
-.shopify-model-viewer-ui .shopify-model-viewer-ui__button--poster:hover,.shopify-model-viewer-ui .shopify-model-viewer-ui__button--poster:focus {
-    color: #f3f3f3
-}
-.plyr__control--overlaid, .btnt4_style_2 .shopify-model-viewer-ui .shopify-model-viewer-ui__button--poster { 
-border-radius: 50% !important;
-}
-.shopify-model-viewer-ui .shopify-model-viewer-ui__controls-area {
-    background: #f3f3f3;
-    border-color: rgba(91,91,91,0.05);
-} */
+/* 
+* .shopify-model-viewer-ui .shopify-model-viewer-ui__button--poster,
+* button.plyr__control.plyr__control--overlaid {
+*     background-color: #5b5b5b;
+*     color: #f3f3f3 !important;
+*     border: 1px solid rgba(243, 243, 243, 0.05)
+* }
+* 
+* .shopify-model-viewer-ui .shopify-model-viewer-ui__button--poster:hover,
+* .shopify-model-viewer-ui .shopify-model-viewer-ui__button--poster:focus {
+*     color: #f3f3f3
+* }
+* 
+* .plyr__control--overlaid,
+* .btnt4_style_2 .shopify-model-viewer-ui .shopify-model-viewer-ui__button--poster {
+*     border-radius: 50% !important;
+* }
+* 
+* .shopify-model-viewer-ui .shopify-model-viewer-ui__controls-area {
+*     background: #f3f3f3;
+*     border-color: rgba(91, 91, 91, 0.05);
+* } 
+*/
 .t4s-deferred-media video,
 .t4s-deferred-media iframe,
 .t4s-deferred-media model-viewer,
@@ -3048,9 +3114,10 @@ border-radius: 50% !important;
 .t4s-deferred-media.is-media__initialized .t4s-product__media {
     opacity: 0;
 }
-.t4s-pr-group-btns>button {
-
-}
+/* 
+* .t4s-pr-group-btns>button {
+* }
+*/
 
 .t4s-pr-group-btns[hidden] {
     opacity: 0;
@@ -3169,7 +3236,9 @@ border-radius: 50% !important;
     top: 0;
     height: 4px;
     width: 100%;
-    /* background-color: rgba(0, 0, 0, 0.1); */
+    /* 
+    * background-color: rgba(0, 0, 0, 0.1); 
+    */
     z-index: 1;
 }
 .t4s-notices__progressbar>span {
@@ -3287,9 +3356,11 @@ border-radius: 50% !important;
     -webkit-transform: translate3d(-104%,0,0);
     transform: translate3d(-104%,0,0);
 }
-/* .t4s-drawer__left {
-   transform: translateX(calc(-100vw + 44px));
-} */
+/* 
+*.t4s-drawer__left {
+*    transform: translateX(calc(-100vw + 44px));
+* } 
+*/
 .t4s-drawer__right {
    right: 0;
    left: auto;
@@ -3401,34 +3472,39 @@ border-radius: 50% !important;
 /* ==========================================================================
    1X. ECLIPSE TITLE
    ========================================================================== */
-/* .t4s-product-title {
-   overflow: hidden;
-}
-.t4s-product-title > a {
-    white-space: nowrap;
-    display: block;
-}
-.t4s-product-title > a:hover {
-    transform: translateX(0);
-    animation: 6s linear 2s 1 show_msg_first,12s linear 8s infinite show_msg;
-    animation: 6s linear 2s 1 show_msg_first,12s linear 8s infinite show_msg;
-}
-@keyframes show_msg_first {
-    from {
-        transform: translateX(0)
-    }
-
-    to {
-        transform: translateX(-100%)
-    }
-}
-
-@keyframes show_msg {
-    from {
-        transform: translateX(100%)
-    }
-
-    to {
-        transform: translateX(-100%)
-    }
-} */
+/* 
+* .t4s-product-title {
+*     overflow: hidden;
+* }
+* 
+* .t4s-product-title>a {
+*     white-space: nowrap;
+*     display: block;
+* }
+* 
+* .t4s-product-title>a:hover {
+*     transform: translateX(0);
+*     animation: 6s linear 2s 1 show_msg_first, 12s linear 8s infinite show_msg;
+*     animation: 6s linear 2s 1 show_msg_first, 12s linear 8s infinite show_msg;
+* }
+* 
+* @keyframes show_msg_first {
+*     from {
+*         transform: translateX(0)
+*     }
+* 
+*     to {
+*         transform: translateX(-100%)
+*     }
+* }
+* 
+* @keyframes show_msg {
+*     from {
+*         transform: translateX(100%)
+*     }
+* 
+*     to {
+*         transform: translateX(-100%)
+*     }
+* } 
+*/
