--- a/assets/t4s-widget.css
+++ b/assets/t4s-widget.css
@@ -130,9 +130,9 @@ h5.t4s-widget-title:after {
     display: inline-block;
 }
 .t4s-filter-tags ul li a{
-    border: 1px solid var(--secondary-color);;
+    border: 1px solid var(--secondary-color);
     border-radius: var(--btn-radius);
-    color: var(--secondary-color);;
+    color: var(--secondary-color);
     display: inline-block;
     font-size: 13px;
     margin: 0 5px 3px 0;
@@ -254,7 +254,6 @@ a.t4s-s-item {
     .t4s-product-categories .t4s-cat-item a:hover,
     .t4s-widget .t4s-widget__pr-title:hover,
     .t4s-widget a:hover,
-    .t4s-widget .t4s-widget__pr-title:hover,
     .t4s-widget .t4s-article-title:hover{
         color: var(--accent-color);
     }
